# lipp

./: .gitignore  CMakeLists.txt  run_micro.sh  run_twitter.sh  run_ycsb.sh
python_script/: performance_parser.py  search_dup.py
src/: lock.h  test_config.h
src/bench/: bench.cpp  test.cpp  twitter.cpp  ycsb.cpp
src/core/: lipp.h  lipp_base_string.h
